--- a/src/app/assignments/editnote-assigment/editnote-assigment.component.html
+++ b/src/app/assignments/editnote-assigment/editnote-assigment.component.html
@@ -2,10 +2,10 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
-<div >
+<div>
   <nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-secondary">
     
-    <div class="collapse navbar-collapse" id="navbarSupportedContent" *ngIf="isConnect()" >
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="navbar-brand">
@@ -14,7 +14,7 @@
         </li>
 
 
-        <li  class="nav-item dropdown">
+        <li class="nav-item dropdown">
            <a [matMenuTriggerFor]="menu" class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-list">
               <span class="badge badge-primary"></span>
@@ -38,59 +38,47 @@
         </li>
         
       </ul>
-      <ul class="navbar-nav ">
-       
-        
-
-        <li class="nav-item">
-          <a class="nav-link" (click)=sedeconnecter()>
-            <i class="fa fa-sign-out">
-              <span class="badge badge-info"></span>
-            </i>
-            Deconnexion
-          </a>
-        </li>
-      </ul>
+      
     </div>
   </nav>
 </div>
-<div class="container" *ngIf="isConnect()">
-  <br><br>
-  
-  <div fxLayout="row wrap" fxLayoutAlign="space-evenly center" fxLayoutGap="20px">
-  <mat-list *ngFor="let a of assignments">
+<br><br>
+<div class="container" *ngIf="assignment">
+  <h1>Edition de l'assignment {{assignment.nom}}</h1>
+  <br>
+
+  <mat-horizontal-stepper #stepper>
     
-    <mat-card class="example-card">
-      <mat-card-header>
-        <img mat-card-avatar src="{{a.photoProf}}" class="example-header-image">
-        <mat-card-title>{{a.nom}}</mat-card-title>
-        <mat-card-subtitle>{{a.auteur}}</mat-card-subtitle>
-      </mat-card-header>
-      <img mat-card-image src="{{a.imgMatiere}}" alt="Photo de la matière">
-      <mat-card-content>
-         Date de rendu : {{a.dateDeRendu | date}} 
-         <br><br>
-        <a routerLink="/assignment/{{a.id}}">
-          <mat-list-item (click)="assignmentClique(a);">
-            <p appRendu *ngIf="a.rendu; else nonsoumis">
-              Devoir intitulé {{a.nomMatiere}}/{{a.nom}} a été rendu.
-            </p>
+    <mat-step [stepControl]="firstFormGroup">
+      <br>
+      <form ngForm class="form" [formGroup]="firstFormGroup">
+        <ng-template matStepLabel>Note</ng-template>
   
-            <ng-template #nonsoumis>
-              <p [ngClass]="{nonrendu:true}">le devoir {{a.nomMatiere}}/{{a.nom}} n'a pas été rendu...</p>
-            </ng-template>
-            
-          </mat-list-item>
-        </a>
-      </mat-card-content>
-      
-    </mat-card>
-  
-  </mat-list>
-  
-</div>
-<a routerLink="/home" *ngIf="!isConnect()">Veuillez vous connecter S'il Vous plaît</a>
-  <br><br>
+        <mat-form-field>
+          <mat-label>Note</mat-label>
+          <input matInput [(ngModel)]="note" formControlName="ctrlun" required>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Remarque</mat-label>
+          <input matInput [(ngModel)]="remarque" formControlName="ctrldeux" required>
+        </mat-form-field>
+      </form>
+      <button mat-flat-button matStepperPrevious>Retour</button>
+      <button mat-flat-button matStepperNext>Enregistrer</button>
+    </mat-step>
+
+    <mat-step>
+      <br>
+      <center> Voulez vous vraiment enregistrer cette note ? </center>
+      <div fxLayout="row wrap" fxLayoutAlign="space-between center" fxLayoutGap="20px">
+        
+        <button mat-stroked-button mat-flat-button color="primary" (click)="onSaveAssignment()" aria-label="Show an example snack-bar">Oui</button>
+        <button mat-flat-button color="warn" matStepperPrevious>Non</button>
+      </div>
+    </mat-step>
+  </mat-horizontal-stepper>
+
+
 </div>
 <div class="bottom section-padding">
   <div class="container">
